Fixed wrong height

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ nav ul li a:hover {
 .canvas-container {
     width: 100%;
     min-height: 450px;
-    height: 150vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
